	values incorrectly.
2019-09-18 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug in glassplayer(1) that caused audio dropouts when
	playing HLS streams containing timed metadata.
	* Added an 'AOT' metric to the AAC codec.
	* Added a 'Transport Sync Errors' the AAC codec.
2020-01-21 Fred Gleason <fredg@paravelsystems.com>
	* Modified the 'Codec|Algorithm' parameter for the 'fdk-aac' codec
	to use a static value of 'AAC'.
	* Updated glassplayer(1) to work properly with FDK-AACv2.
2020-01-21 Fred Gleason <fredg@paravelsystems.com>
	* Fixed spelling error in error message in glassplayer(1).
2020-01-21 Fred Gleason <fredg@paravelsystems.com>
	* Added a '--dump-headers' swich to glassplayer(1).
	* Implemented the '--dump-headers' swich for the XCast server type.
2020-01-21 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug in glassplayer(1) that caused corruption when reading
	multi-byte UTF-8 characters from XCast headers.
2020-01-24 Fred Gleason <fredg@paravelsystems.com>
	* Added a 'CODINGSTYLE' file.
2020-01-24 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a typo in the 'README' file.
2020-01-24 Fred Gleason <fredg@paravelsystems.com>
	* Updated 'INSTALL'.
2020-01-24 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 0.9.0.
2021-05-03 Fred Gleason <fredg@paravelsystems.com>
	* Added 'compile' to the 'make maintainer-clean' target.
2021-05-03 Fred Gleason <fredg@paravelsystems.com>
	* Cleaned up compiler warnings for glassplayer(1).
	* Cleaned up compiler warnings for glassplayergui(1).
2021-05-03 Fred Gleason <fredg@paravelsystems.com>
	* Changed the format of the 'tone:' scheme to be compliant with the
	host naming requirements in RFC1738.
2021-05-03 Fred Gleason <fredg@paravelsystems.com>
	* Debianized the source.
2021-05-03 Fred Gleason <fredg@paravelsystems.com>
	* Added a 'make deb' target.
2021-05-04 Fred Gleason <fredg@paravelsystems.com>
	* Updated the 'make deb' target.