@@ -483,3 +483,6 @@
 	* Added a 'make deb' target.
 2021-05-04 Fred Gleason <fredg@paravelsystems.com>
 	* Updated the 'make deb' target.
+2021-05-21 Fred Gleason <fredg@paravelsystems.com>
+	* Split the 'glassplayer' DEB package into 'glassplayer' and
+	'glassplayer-gui' packages.
